# paume

./: .gitignore  .gitmodules  0001-needed-transform.patch  CNAME  ChangeLog.md  Makefile  README.md  Untitled.ipynb  config.toml  index.html  index.xml  pyproject.toml  sitemap.xml  theme_utils.go  these.tex
-0/: index.html
0/: index.html
00/: index.html
1/: index.html
2/: index.html
3/: index.html
4/: index.html
5/: index.html
6/: index.html
abreviations/: index.html
abstract/: index.html
addons/: index.html  index.xml
avancement/: index.html
back/: index.html  index.xml
bib/: bibtex.bib  bibtex_sample.bib.temp
categories/: index.html  index.xml
chutes/: index.html  index.xml
conclusion/: index.html
content/: Untitled.ipynb  _index.md  avancement.md  chutes.md  credits.md  fils.md  structure.md
creations/page/inkscape_scripts/: mallarme_template.py  pyproject.toml  templates.py
credits/: index.html
css/: style.css
fils/: index.html
gabarit/: gabarit.tex
graph/: index.html
hooks/: pre-commit
images/: fabrique2.mlt
introduction/: index.html
liste_figure/: index.html
machine/: index.html
pages/: index.html  index.xml  references.tex
python/: Untitled.ipynb  do_network.py  graph.py  hand.py  replace.py  replace_verbatim_tex.py  replaceverbatim.py  tex_extract.py  themes.json
references/: index.html
referencestmp/: index.html
remerciements/: index.html
replace_dummy/: index.html
resume/: index.html
scripts/: generate_json.py
src/: reglages.md
static/: bib.json  soutenance.html
tags/: index.html  (+1 more)
(+107 files in other folders)
