[tool.poetry]
name = "inkscape-scripts"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"
packages = [{include = "inkscape_scripts"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
